added geohashing in search api of serviceprovider engagement